# beem-ai

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  hacs.json  pyproject.toml
_archive/: event_bus.py  optimization.py  safety_manager.py  water_heater.py
_archive/tests/: test_event_bus.py  test_tariff_and_safety.py  test_water_heater.py
api_reference/: analyze_consumption.py  fetch_all.py
custom_components/beem_ai/: __init__.py  beem_api.py  binary_sensor.py  config_flow.py  const.py  consumption_analyzer.py  coordinator.py  ev_charger_controller.py  forecast_tracker.py  manifest.json  mqtt_client.py  number.py  optimization.py  options_flow.py  safety_manager.py  select.py  sensor.py  state_store.py  strings.json  switch.py  tariff_manager.py  water_heater.py  water_heater_controller.py
custom_components/beem_ai/forecasting/: forecast_solar.py  open_meteo.py  solar_forecast.py  solcast.py
custom_components/beem_ai/translations/: en.json  fr.json
tasks/: todo.md
tests/: conftest.py  test_battery_control.py  test_beem_api.py  test_config_flow.py  test_consumption_analyzer.py  test_coordinator_refresh.py  test_ev_charger_controller.py  test_forecast_tracker.py  test_mqtt_client.py  test_optimization_engine.py  test_options_flow.py  test_overload_coordination.py  test_select.py  test_solar_forecast.py  test_solcast.py  test_state_persistence.py  test_state_store.py  test_tariff_and_safety.py  test_tariff_manager.py  test_water_heater.py  test_water_heater_controller.py
