[project]
name = "beem-ai"
version = "0.1.0"
description = "Intelligent Energy Management System for Home Assistant"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "paho-mqtt>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["config/appdaemon/apps"]
